Updating the docs in ramp-board/dev/ for branch: master, commit 14dc000b55faf044b7bb98c1c4abc09ab61f7291 [skip ci]

--- a/ramp-board/dev/genindex.html
+++ b/ramp-board/dev/genindex.html
@@ -183,6 +183,7 @@
  | <a href="#S"><strong>S</strong></a>
  | <a href="#T"><strong>T</strong></a>
  | <a href="#U"><strong>U</strong></a>
+ | <a href="#V"><strong>V</strong></a>
  | <a href="#W"><strong>W</strong></a>
  
 </div>
@@ -637,6 +638,28 @@
 </li>
         <li><a href="generated/ramp_engine.local.CondaEnvWorker.html#ramp_engine.local.CondaEnvWorker.__init__">(ramp_engine.local.CondaEnvWorker method)</a>
 </li>
+        <li><a href="generated/ramp_frontend.forms.AskForEventForm.html#ramp_frontend.forms.AskForEventForm.__init__">(ramp_frontend.forms.AskForEventForm method)</a>
+</li>
+        <li><a href="generated/ramp_frontend.forms.CodeForm.html#ramp_frontend.forms.CodeForm.__init__">(ramp_frontend.forms.CodeForm method)</a>
+</li>
+        <li><a href="generated/ramp_frontend.forms.CreditForm.html#ramp_frontend.forms.CreditForm.__init__">(ramp_frontend.forms.CreditForm method)</a>
+</li>
+        <li><a href="generated/ramp_frontend.forms.EventUpdateProfileForm.html#ramp_frontend.forms.EventUpdateProfileForm.__init__">(ramp_frontend.forms.EventUpdateProfileForm method)</a>
+</li>
+        <li><a href="generated/ramp_frontend.forms.ImportForm.html#ramp_frontend.forms.ImportForm.__init__">(ramp_frontend.forms.ImportForm method)</a>
+</li>
+        <li><a href="generated/ramp_frontend.forms.LoginForm.html#ramp_frontend.forms.LoginForm.__init__">(ramp_frontend.forms.LoginForm method)</a>
+</li>
+        <li><a href="generated/ramp_frontend.forms.MultiCheckboxField.html#ramp_frontend.forms.MultiCheckboxField.__init__">(ramp_frontend.forms.MultiCheckboxField method)</a>
+</li>
+        <li><a href="generated/ramp_frontend.forms.SubmitForm.html#ramp_frontend.forms.SubmitForm.__init__">(ramp_frontend.forms.SubmitForm method)</a>
+</li>
+        <li><a href="generated/ramp_frontend.forms.UploadForm.html#ramp_frontend.forms.UploadForm.__init__">(ramp_frontend.forms.UploadForm method)</a>
+</li>
+        <li><a href="generated/ramp_frontend.forms.UserCreateProfileForm.html#ramp_frontend.forms.UserCreateProfileForm.__init__">(ramp_frontend.forms.UserCreateProfileForm method)</a>
+</li>
+        <li><a href="generated/ramp_frontend.forms.UserUpdateProfileForm.html#ramp_frontend.forms.UserUpdateProfileForm.__init__">(ramp_frontend.forms.UserUpdateProfileForm method)</a>
+</li>
         <li><a href="generated/ramp_utils.datasets.OSFRemoteMetaData.html#ramp_utils.datasets.OSFRemoteMetaData.__init__">(ramp_utils.datasets.OSFRemoteMetaData method)</a>
 </li>
       </ul></li>
@@ -664,14 +687,14 @@
 </li>
       <li><a href="generated/ramp_database.tools.submission.add_submission.html#ramp_database.tools.submission.add_submission">add_submission() (in module ramp_database.tools.submission)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="generated/ramp_database.tools.database.add_submission_file_type.html#ramp_database.tools.database.add_submission_file_type">add_submission_file_type() (in module ramp_database.tools.database)</a>
 </li>
       <li><a href="generated/ramp_database.tools.database.add_submission_file_type_extension.html#ramp_database.tools.database.add_submission_file_type_extension">add_submission_file_type_extension() (in module ramp_database.tools.database)</a>
 </li>
       <li><a href="generated/ramp_database.tools.submission.add_submission_similarity.html#ramp_database.tools.submission.add_submission_similarity">add_submission_similarity() (in module ramp_database.tools.submission)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="generated/ramp_database.tools.user.add_user.html#ramp_database.tools.user.add_user">add_user() (in module ramp_database.tools.user)</a>
 </li>
       <li><a href="generated/ramp_database.tools.user.add_user_interaction.html#ramp_database.tools.user.add_user_interaction">add_user_interaction() (in module ramp_database.tools.user)</a>
@@ -680,9 +703,19 @@
 </li>
       <li><a href="generated/ramp_database.tools.event.add_workflow.html#ramp_database.tools.event.add_workflow">add_workflow() (in module ramp_database.tools.event)</a>
 </li>
+      <li><a href="generated/ramp_frontend.views.admin.approve_sign_up_for_event.html#ramp_frontend.views.admin.approve_sign_up_for_event">approve_sign_up_for_event() (in module ramp_frontend.views.admin)</a>
+</li>
+      <li><a href="generated/ramp_frontend.views.admin.approve_single_user.html#ramp_frontend.views.admin.approve_single_user">approve_single_user() (in module ramp_frontend.views.admin)</a>
+</li>
       <li><a href="generated/ramp_database.tools.user.approve_user.html#ramp_database.tools.user.approve_user">approve_user() (in module ramp_database.tools.user)</a>
 </li>
+      <li><a href="generated/ramp_frontend.views.admin.approve_users.html#ramp_frontend.views.admin.approve_users">approve_users() (in module ramp_frontend.views.admin)</a>
+</li>
+      <li><a href="generated/ramp_frontend.views.ramp.ask_for_event.html#ramp_frontend.views.ramp.ask_for_event">ask_for_event() (in module ramp_frontend.views.ramp)</a>
+</li>
       <li><a href="generated/ramp_database.tools.team.ask_sign_up_team.html#ramp_database.tools.team.ask_sign_up_team">ask_sign_up_team() (in module ramp_database.tools.team)</a>
+</li>
+      <li><a href="generated/ramp_frontend.forms.AskForEventForm.html#ramp_frontend.forms.AskForEventForm">AskForEventForm (class in ramp_frontend.forms)</a>
 </li>
       <li><a href="generated/ramp_engine.aws.AWSWorker.html#ramp_engine.aws.AWSWorker">AWSWorker (class in ramp_engine.aws)</a>
 </li>
@@ -706,17 +739,23 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="generated/ramp_database.utils.check_password.html#ramp_database.utils.check_password">check_password() (in module ramp_database.utils)</a>
 </li>
+      <li><a href="generated/ramp_frontend.forms.CodeForm.html#ramp_frontend.forms.CodeForm">CodeForm (class in ramp_frontend.forms)</a>
+</li>
       <li><a href="generated/ramp_frontend.views.leaderboard.competition_leaderboard.html#ramp_frontend.views.leaderboard.competition_leaderboard">competition_leaderboard() (in module ramp_frontend.views.leaderboard)</a>
 </li>
       <li><a href="generated/ramp_engine.local.CondaEnvWorker.html#ramp_engine.local.CondaEnvWorker">CondaEnvWorker (class in ramp_engine.local)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="generated/ramp_frontend.create_app.html#ramp_frontend.create_app">create_app() (in module ramp_frontend)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="generated/ramp_database.testing.create_test_db.html#ramp_database.testing.create_test_db">create_test_db() (in module ramp_database.testing)</a>
 </li>
       <li><a href="generated/ramp_database.testing.create_toy_db.html#ramp_database.testing.create_toy_db">create_toy_db() (in module ramp_database.testing)</a>
+</li>
+      <li><a href="generated/ramp_frontend.views.ramp.credit.html#ramp_frontend.views.ramp.credit">credit() (in module ramp_frontend.views.ramp)</a>
+</li>
+      <li><a href="generated/ramp_frontend.forms.CreditForm.html#ramp_frontend.forms.CreditForm">CreditForm (class in ramp_frontend.forms)</a>
 </li>
       <li><a href="generated/ramp_database.model.CVFold.html#ramp_database.model.CVFold">CVFold (class in ramp_database.model)</a>
 </li>
@@ -727,6 +766,8 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="generated/ramp_engine.daemon.Daemon.html#ramp_engine.daemon.Daemon">Daemon (class in ramp_engine.daemon)</a>
+</li>
+      <li><a href="generated/ramp_frontend.views.admin.dashboard_submissions.html#ramp_frontend.views.admin.dashboard_submissions">dashboard_submissions() (in module ramp_frontend.views.admin)</a>
 </li>
       <li><a href="generated/ramp_frontend.views.general.data_science_themes.html#ramp_frontend.views.general.data_science_themes">data_science_themes() (in module ramp_frontend.views.general)</a>
 </li>
@@ -758,6 +799,8 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="generated/ramp_database.model.Event.html#ramp_database.model.Event">Event (class in ramp_database.model)</a>
 </li>
+      <li><a href="generated/ramp_frontend.views.ramp.event_plots.html#ramp_frontend.views.ramp.event_plots">event_plots() (in module ramp_frontend.views.ramp)</a>
+</li>
       <li><a href="generated/ramp_database.model.EventAdmin.html#ramp_database.model.EventAdmin">EventAdmin (class in ramp_database.model)</a>
 </li>
   </ul></td>
@@ -765,6 +808,8 @@
       <li><a href="generated/ramp_database.model.EventScoreType.html#ramp_database.model.EventScoreType">EventScoreType (class in ramp_database.model)</a>
 </li>
       <li><a href="generated/ramp_database.model.EventTeam.html#ramp_database.model.EventTeam">EventTeam (class in ramp_database.model)</a>
+</li>
+      <li><a href="generated/ramp_frontend.forms.EventUpdateProfileForm.html#ramp_frontend.forms.EventUpdateProfileForm">EventUpdateProfileForm (class in ramp_frontend.forms)</a>
 </li>
       <li><a href="generated/ramp_database.model.Extension.html#ramp_database.model.Extension">Extension (class in ramp_database.model)</a>
 </li>
@@ -858,14 +903,16 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="generated/ramp_utils.import_module_from_source.html#ramp_utils.import_module_from_source">import_module_from_source() (in module ramp_utils)</a>
 </li>
+      <li><a href="generated/ramp_frontend.forms.ImportForm.html#ramp_frontend.forms.ImportForm">ImportForm (class in ramp_frontend.forms)</a>
+</li>
       <li><a href="generated/ramp_frontend.views.general.index.html#ramp_frontend.views.general.index">index() (in module ramp_frontend.views.general)</a>
 </li>
       <li><a href="generated/ramp_database.tools.frontend.is_accessible_code.html#ramp_database.tools.frontend.is_accessible_code">is_accessible_code() (in module ramp_database.tools.frontend)</a>
 </li>
-      <li><a href="generated/ramp_database.tools.frontend.is_accessible_event.html#ramp_database.tools.frontend.is_accessible_event">is_accessible_event() (in module ramp_database.tools.frontend)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="generated/ramp_database.tools.frontend.is_accessible_event.html#ramp_database.tools.frontend.is_accessible_event">is_accessible_event() (in module ramp_database.tools.frontend)</a>
+</li>
       <li><a href="generated/ramp_database.tools.frontend.is_accessible_leaderboard.html#ramp_database.tools.frontend.is_accessible_leaderboard">is_accessible_leaderboard() (in module ramp_database.tools.frontend)</a>
 </li>
       <li><a href="generated/ramp_database.tools.frontend.is_admin.html#ramp_database.tools.frontend.is_admin">is_admin() (in module ramp_database.tools.frontend)</a>
@@ -900,6 +947,8 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="generated/ramp_frontend.testing.login_scope.html#ramp_frontend.testing.login_scope">login_scope() (in module ramp_frontend.testing)</a>
 </li>
+      <li><a href="generated/ramp_frontend.forms.LoginForm.html#ramp_frontend.forms.LoginForm">LoginForm (class in ramp_frontend.forms)</a>
+</li>
       <li><a href="generated/ramp_frontend.testing.logout.html#ramp_frontend.testing.logout">logout() (in module ramp_frontend.testing)</a>
 </li>
   </ul></td>
@@ -930,6 +979,8 @@
 </li>
         <li><a href="api.html#module-ramp_database.utils">ramp_database.utils</a>
 </li>
+        <li><a href="api.html#module-ramp_frontend.forms">ramp_frontend.forms</a>
+</li>
         <li><a href="api.html#module-ramp_frontend.testing">ramp_frontend.testing</a>
 </li>
         <li><a href="api.html#module-ramp_frontend.utils">ramp_frontend.utils</a>
@@ -939,6 +990,8 @@
       </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="generated/ramp_frontend.forms.MultiCheckboxField.html#ramp_frontend.forms.MultiCheckboxField">MultiCheckboxField (class in ramp_frontend.forms)</a>
+</li>
       <li><a href="generated/ramp_frontend.views.leaderboard.my_submissions.html#ramp_frontend.views.leaderboard.my_submissions">my_submissions() (in module ramp_frontend.views.leaderboard)</a>
 </li>
   </ul></td>
@@ -967,11 +1020,15 @@
 </li>
       <li><a href="generated/ramp_frontend.views.leaderboard.private_leaderboard.html#ramp_frontend.views.leaderboard.private_leaderboard">private_leaderboard() (in module ramp_frontend.views.leaderboard)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="generated/ramp_database.model.Problem.html#ramp_database.model.Problem">Problem (class in ramp_database.model)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="generated/ramp_frontend.views.ramp.problem.html#ramp_frontend.views.ramp.problem">problem() (in module ramp_frontend.views.ramp)</a>
+</li>
       <li><a href="generated/ramp_database.model.ProblemKeyword.html#ramp_database.model.ProblemKeyword">ProblemKeyword (class in ramp_database.model)</a>
+</li>
+      <li><a href="generated/ramp_frontend.views.ramp.problems.html#ramp_frontend.views.ramp.problems">problems() (in module ramp_frontend.views.ramp)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -1331,6 +1388,13 @@
 </li>
       </ul></li>
       <li>
+    ramp_frontend.forms
+
+      <ul>
+        <li><a href="api.html#module-ramp_frontend.forms">module</a>
+</li>
+      </ul></li>
+      <li>
     ramp_frontend.testing
 
       <ul>
@@ -1365,6 +1429,8 @@
 <h2 id="S">S</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="generated/ramp_frontend.views.ramp.sandbox.html#ramp_frontend.views.ramp.sandbox">sandbox() (in module ramp_frontend.views.ramp)</a>
+</li>
       <li><a href="generated/ramp_frontend.views.visualization.score_plot.html#ramp_frontend.views.visualization.score_plot">score_plot() (in module ramp_frontend.views.visualization)</a>
 </li>
       <li><a href="generated/ramp_database.tools.submission.score_submission.html#ramp_database.tools.submission.score_submission">score_submission() (in module ramp_database.tools.submission)</a>
@@ -1403,6 +1469,8 @@
 </li>
       <li><a href="generated/ramp_database.testing.setup_toy_db.html#ramp_database.testing.setup_toy_db">setup_toy_db() (in module ramp_database.testing)</a>
 </li>
+      <li><a href="generated/ramp_frontend.views.ramp.sign_up_for_event.html#ramp_frontend.views.ramp.sign_up_for_event">sign_up_for_event() (in module ramp_frontend.views.ramp)</a>
+</li>
       <li><a href="generated/ramp_database.tools.team.sign_up_team.html#ramp_database.tools.team.sign_up_team">sign_up_team() (in module ramp_database.tools.team)</a>
 </li>
       <li><a href="generated/ramp_database.testing.sign_up_teams_to_events.html#ramp_database.testing.sign_up_teams_to_events">sign_up_teams_to_events() (in module ramp_database.testing)</a>
@@ -1426,6 +1494,8 @@
       <li><a href="generated/ramp_database.testing.submit_all_starting_kits.html#ramp_database.testing.submit_all_starting_kits">submit_all_starting_kits() (in module ramp_database.testing)</a>
 </li>
       <li><a href="generated/ramp_database.tools.submission.submit_starting_kits.html#ramp_database.tools.submission.submit_starting_kits">submit_starting_kits() (in module ramp_database.tools.submission)</a>
+</li>
+      <li><a href="generated/ramp_frontend.forms.SubmitForm.html#ramp_frontend.forms.SubmitForm">SubmitForm (class in ramp_frontend.forms)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -1451,15 +1521,39 @@
 </li>
       <li><a href="generated/ramp_database.tools.leaderboard.update_all_user_leaderboards.html#ramp_database.tools.leaderboard.update_all_user_leaderboards">update_all_user_leaderboards() (in module ramp_database.tools.leaderboard)</a>
 </li>
+      <li><a href="generated/ramp_frontend.views.admin.update_event.html#ramp_frontend.views.admin.update_event">update_event() (in module ramp_frontend.views.admin)</a>
+</li>
       <li><a href="generated/ramp_database.tools.leaderboard.update_leaderboards.html#ramp_database.tools.leaderboard.update_leaderboards">update_leaderboards() (in module ramp_database.tools.leaderboard)</a>
+</li>
+      <li><a href="generated/ramp_database.tools.leaderboard.update_user_leaderboards.html#ramp_database.tools.leaderboard.update_user_leaderboards">update_user_leaderboards() (in module ramp_database.tools.leaderboard)</a>
+</li>
+      <li><a href="generated/ramp_frontend.forms.UploadForm.html#ramp_frontend.forms.UploadForm">UploadForm (class in ramp_frontend.forms)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="generated/ramp_database.tools.leaderboard.update_user_leaderboards.html#ramp_database.tools.leaderboard.update_user_leaderboards">update_user_leaderboards() (in module ramp_database.tools.leaderboard)</a>
-</li>
       <li><a href="generated/ramp_database.model.User.html#ramp_database.model.User">User (class in ramp_database.model)</a>
 </li>
+      <li><a href="generated/ramp_frontend.views.ramp.user_event.html#ramp_frontend.views.ramp.user_event">user_event() (in module ramp_frontend.views.ramp)</a>
+</li>
+      <li><a href="generated/ramp_frontend.views.admin.user_interactions.html#ramp_frontend.views.admin.user_interactions">user_interactions() (in module ramp_frontend.views.admin)</a>
+</li>
+      <li><a href="generated/ramp_frontend.forms.UserCreateProfileForm.html#ramp_frontend.forms.UserCreateProfileForm">UserCreateProfileForm (class in ramp_frontend.forms)</a>
+</li>
       <li><a href="generated/ramp_database.model.UserInteraction.html#ramp_database.model.UserInteraction">UserInteraction (class in ramp_database.model)</a>
+</li>
+      <li><a href="generated/ramp_frontend.forms.UserUpdateProfileForm.html#ramp_frontend.forms.UserUpdateProfileForm">UserUpdateProfileForm (class in ramp_frontend.forms)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="V">V</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="generated/ramp_frontend.views.ramp.view_model.html#ramp_frontend.views.ramp.view_model">view_model() (in module ramp_frontend.views.ramp)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="generated/ramp_frontend.views.ramp.view_submission_error.html#ramp_frontend.views.ramp.view_submission_error">view_submission_error() (in module ramp_frontend.views.ramp)</a>
 </li>
   </ul></td>
 </tr></table>
