Updating the docs in ramp-board/dev/ for branch: master, commit 6373bf02efc096e02b26320e4f11edd00f9e5752 [skip ci]

--- a/ramp-board/dev/genindex.html
+++ b/ramp-board/dev/genindex.html
@@ -225,6 +225,8 @@
 </li>
         <li><a href="cli.html#cmdoption-ramp-database-delete-event-team-config">ramp-database-delete-event-team command line option</a>
 </li>
+        <li><a href="cli.html#cmdoption-ramp-database-delete-predictions-config">ramp-database-delete-predictions command line option</a>
+</li>
         <li><a href="cli.html#cmdoption-ramp-database-delete-user-config">ramp-database-delete-user command line option</a>
 </li>
         <li><a href="cli.html#cmdoption-ramp-database-get-submissions-by-state-config">ramp-database-get-submissions-by-state command line option</a>
@@ -259,6 +261,8 @@
 
       <ul>
         <li><a href="cli.html#cmdoption-ramp-database-delete-event-config-event">ramp-database-delete-event command line option</a>
+</li>
+        <li><a href="cli.html#cmdoption-ramp-database-delete-predictions-config-event">ramp-database-delete-predictions command line option</a>
 </li>
       </ul></li>
       <li>
@@ -348,6 +352,8 @@
 
       <ul>
         <li><a href="cli.html#cmdoption-ramp-database-delete-event-force">ramp-database-delete-event command line option</a>
+</li>
+        <li><a href="cli.html#cmdoption-ramp-database-delete-predictions-force">ramp-database-delete-predictions command line option</a>
 </li>
         <li><a href="cli.html#cmdoption-ramp-setup-deploy-event-force">ramp-setup-deploy-event command line option</a>
 </li>
@@ -1153,6 +1159,17 @@
         <li><a href="cli.html#cmdoption-ramp-database-delete-event-team-event">--event &lt;event&gt;</a>
 </li>
         <li><a href="cli.html#cmdoption-ramp-database-delete-event-team-team">--team &lt;team&gt;</a>
+</li>
+      </ul></li>
+      <li>
+    ramp-database-delete-predictions command line option
+
+      <ul>
+        <li><a href="cli.html#cmdoption-ramp-database-delete-predictions-config">--config &lt;config&gt;</a>
+</li>
+        <li><a href="cli.html#cmdoption-ramp-database-delete-predictions-config-event">--config-event &lt;config_event&gt;</a>
+</li>
+        <li><a href="cli.html#cmdoption-ramp-database-delete-predictions-force">--force</a>
 </li>
       </ul></li>
       <li>
