Updating the docs in ramp-board/advanced/ for branch: advanced, commit 3a873a0ec587765de30e7664d241ced176708964 [skip ci]

--- a/ramp-board/advanced/genindex.html
+++ b/ramp-board/advanced/genindex.html
@@ -221,6 +221,8 @@
 </li>
         <li><a href="cli.html#cmdoption-ramp-database-approve-user-config">ramp-database-approve-user command line option</a>
 </li>
+        <li><a href="cli.html#cmdoption-ramp-database-compute-contributivity-config">ramp-database-compute-contributivity command line option</a>
+</li>
         <li><a href="cli.html#cmdoption-ramp-database-delete-event-config">ramp-database-delete-event command line option</a>
 </li>
         <li><a href="cli.html#cmdoption-ramp-database-delete-event-team-config">ramp-database-delete-event-team command line option</a>
@@ -301,6 +303,8 @@
 </li>
         <li><a href="cli.html#cmdoption-ramp-database-add-submission-event">ramp-database-add-submission command line option</a>
 </li>
+        <li><a href="cli.html#cmdoption-ramp-database-compute-contributivity-event">ramp-database-compute-contributivity command line option</a>
+</li>
         <li><a href="cli.html#cmdoption-ramp-database-delete-event-team-event">ramp-database-delete-event-team command line option</a>
 </li>
         <li><a href="cli.html#cmdoption-ramp-database-get-submissions-by-state-event">ramp-database-get-submissions-by-state command line option</a>
@@ -356,8 +360,6 @@
         <li><a href="cli.html#cmdoption-ramp-setup-init-event-force">ramp-setup-init-event command line option</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     --force &lt;force&gt;
 
@@ -367,6 +369,8 @@
         <li><a href="cli.html#cmdoption-ramp-database-add-problem-force">ramp-database-add-problem command line option</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     --from-disk
 
@@ -425,6 +429,13 @@
 </li>
       </ul></li>
       <li>
+    --min-improvement &lt;min_improvement&gt;
+
+      <ul>
+        <li><a href="cli.html#cmdoption-ramp-database-compute-contributivity-min-improvement">ramp-database-compute-contributivity command line option</a>
+</li>
+      </ul></li>
+      <li>
     --name &lt;name&gt;
 
       <ul>
@@ -466,6 +477,27 @@
         <li><a href="cli.html#cmdoption-ramp-database-add-event-problem">ramp-database-add-event command line option</a>
 </li>
         <li><a href="cli.html#cmdoption-ramp-database-add-problem-problem">ramp-database-add-problem command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --ramp-data-dir &lt;ramp_data_dir&gt;
+
+      <ul>
+        <li><a href="cli.html#cmdoption-ramp-database-compute-contributivity-ramp-data-dir">ramp-database-compute-contributivity command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --ramp-kit-dir &lt;ramp_kit_dir&gt;
+
+      <ul>
+        <li><a href="cli.html#cmdoption-ramp-database-compute-contributivity-ramp-kit-dir">ramp-database-compute-contributivity command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --ramp-predictions-dir &lt;ramp_predictions_dir&gt;
+
+      <ul>
+        <li><a href="cli.html#cmdoption-ramp-database-compute-contributivity-ramp-predictions-dir">ramp-database-compute-contributivity command line option</a>
 </li>
       </ul></li>
       <li>
@@ -1130,6 +1162,23 @@
 </li>
       </ul></li>
       <li>
+    ramp-database-compute-contributivity command line option
+
+      <ul>
+        <li><a href="cli.html#cmdoption-ramp-database-compute-contributivity-config">--config &lt;config&gt;</a>
+</li>
+        <li><a href="cli.html#cmdoption-ramp-database-compute-contributivity-event">--event &lt;event&gt;</a>
+</li>
+        <li><a href="cli.html#cmdoption-ramp-database-compute-contributivity-min-improvement">--min-improvement &lt;min_improvement&gt;</a>
+</li>
+        <li><a href="cli.html#cmdoption-ramp-database-compute-contributivity-ramp-data-dir">--ramp-data-dir &lt;ramp_data_dir&gt;</a>
+</li>
+        <li><a href="cli.html#cmdoption-ramp-database-compute-contributivity-ramp-kit-dir">--ramp-kit-dir &lt;ramp_kit_dir&gt;</a>
+</li>
+        <li><a href="cli.html#cmdoption-ramp-database-compute-contributivity-ramp-predictions-dir">--ramp-predictions-dir &lt;ramp_predictions_dir&gt;</a>
+</li>
+      </ul></li>
+      <li>
     ramp-database-delete-event command line option
 
       <ul>
@@ -1206,6 +1255,8 @@
         <li><a href="cli.html#cmdoption-ramp-database-set-user-access-level-login">--login &lt;login&gt;</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     ramp-database-sign-up-team command line option
 
@@ -1217,8 +1268,6 @@
         <li><a href="cli.html#cmdoption-ramp-database-sign-up-team-team">--team &lt;team&gt;</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     ramp-database-update-all-users-leaderboards command line option
 
