--- a/ramp-board/advanced/genindex.html
+++ b/ramp-board/advanced/genindex.html
@@ -227,6 +227,8 @@
 </li>
         <li><a href="cli.html#cmdoption-ramp-database-delete-event-team-config">ramp-database-delete-event-team command line option</a>
 </li>
+        <li><a href="cli.html#cmdoption-ramp-database-delete-predictions-config">ramp-database-delete-predictions command line option</a>
+</li>
         <li><a href="cli.html#cmdoption-ramp-database-delete-user-config">ramp-database-delete-user command line option</a>
 </li>
         <li><a href="cli.html#cmdoption-ramp-database-get-submissions-by-state-config">ramp-database-get-submissions-by-state command line option</a>
@@ -261,6 +263,8 @@
 
       <ul>
         <li><a href="cli.html#cmdoption-ramp-database-delete-event-config-event">ramp-database-delete-event command line option</a>
+</li>
+        <li><a href="cli.html#cmdoption-ramp-database-delete-predictions-config-event">ramp-database-delete-predictions command line option</a>
 </li>
       </ul></li>
       <li>
@@ -352,6 +356,8 @@
 
       <ul>
         <li><a href="cli.html#cmdoption-ramp-database-delete-event-force">ramp-database-delete-event command line option</a>
+</li>
+        <li><a href="cli.html#cmdoption-ramp-database-delete-predictions-force">ramp-database-delete-predictions command line option</a>
 </li>
         <li><a href="cli.html#cmdoption-ramp-setup-deploy-event-force">ramp-setup-deploy-event command line option</a>
 </li>
@@ -1200,6 +1206,17 @@
         <li><a href="cli.html#cmdoption-ramp-database-delete-event-team-event">--event &lt;event&gt;</a>
 </li>
         <li><a href="cli.html#cmdoption-ramp-database-delete-event-team-team">--team &lt;team&gt;</a>
+</li>
+      </ul></li>
+      <li>
+    ramp-database-delete-predictions command line option
+
+      <ul>
+        <li><a href="cli.html#cmdoption-ramp-database-delete-predictions-config">--config &lt;config&gt;</a>
+</li>
+        <li><a href="cli.html#cmdoption-ramp-database-delete-predictions-config-event">--config-event &lt;config_event&gt;</a>
+</li>
+        <li><a href="cli.html#cmdoption-ramp-database-delete-predictions-force">--force</a>
 </li>
       </ul></li>
       <li>
