Updating the docs in ramp-board/dev/ for branch: master, commit 31f5577ec45cf9e44a76f1d2804d96e8a854170d [skip ci]

--- a/ramp-board/dev/create_ramp_event.html
+++ b/ramp-board/dev/create_ramp_event.html
@@ -214,6 +214,7 @@ specific to the event.</p>
     <span class="n">hunger_policy</span><span class="p">:</span> <span class="n">sleep</span>
     <span class="n">n_workers</span><span class="p">:</span> <span class="mi">2</span>
     <span class="n">n_threads</span><span class="p">:</span> <span class="mi">2</span>
+    <span class="n">time_between_collection</span><span class="p">:</span> <span class="mi">1</span>
 </pre></div>
 </div>
 <p><strong>ramp configuration</strong></p>
