Updating the docs in ramp-board/advanced/ for branch: advanced, commit 377b81bd04cc66162d653440e0e45c18c2549c3a [skip ci]

--- a/ramp-board/advanced/genindex.html
+++ b/ramp-board/advanced/genindex.html
@@ -262,6 +262,8 @@
     --config-event &lt;config_event&gt;
 
       <ul>
+        <li><a href="cli.html#cmdoption-ramp-database-compute-contributivity-config-event">ramp-database-compute-contributivity command line option</a>
+</li>
         <li><a href="cli.html#cmdoption-ramp-database-delete-event-config-event">ramp-database-delete-event command line option</a>
 </li>
         <li><a href="cli.html#cmdoption-ramp-database-delete-predictions-config-event">ramp-database-delete-predictions command line option</a>
@@ -306,8 +308,6 @@
         <li><a href="cli.html#cmdoption-ramp-database-add-event-admin-event">ramp-database-add-event-admin command line option</a>
 </li>
         <li><a href="cli.html#cmdoption-ramp-database-add-submission-event">ramp-database-add-submission command line option</a>
-</li>
-        <li><a href="cli.html#cmdoption-ramp-database-compute-contributivity-event">ramp-database-compute-contributivity command line option</a>
 </li>
         <li><a href="cli.html#cmdoption-ramp-database-delete-event-team-event">ramp-database-delete-event-team command line option</a>
 </li>
@@ -366,6 +366,8 @@
         <li><a href="cli.html#cmdoption-ramp-setup-init-event-force">ramp-setup-init-event command line option</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     --force &lt;force&gt;
 
@@ -375,8 +377,6 @@
         <li><a href="cli.html#cmdoption-ramp-database-add-problem-force">ramp-database-add-problem command line option</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     --from-disk
 
@@ -483,27 +483,6 @@
         <li><a href="cli.html#cmdoption-ramp-database-add-event-problem">ramp-database-add-event command line option</a>
 </li>
         <li><a href="cli.html#cmdoption-ramp-database-add-problem-problem">ramp-database-add-problem command line option</a>
-</li>
-      </ul></li>
-      <li>
-    --ramp-data-dir &lt;ramp_data_dir&gt;
-
-      <ul>
-        <li><a href="cli.html#cmdoption-ramp-database-compute-contributivity-ramp-data-dir">ramp-database-compute-contributivity command line option</a>
-</li>
-      </ul></li>
-      <li>
-    --ramp-kit-dir &lt;ramp_kit_dir&gt;
-
-      <ul>
-        <li><a href="cli.html#cmdoption-ramp-database-compute-contributivity-ramp-kit-dir">ramp-database-compute-contributivity command line option</a>
-</li>
-      </ul></li>
-      <li>
-    --ramp-predictions-dir &lt;ramp_predictions_dir&gt;
-
-      <ul>
-        <li><a href="cli.html#cmdoption-ramp-database-compute-contributivity-ramp-predictions-dir">ramp-database-compute-contributivity command line option</a>
 </li>
       </ul></li>
       <li>
@@ -1171,15 +1150,9 @@
       <ul>
         <li><a href="cli.html#cmdoption-ramp-database-compute-contributivity-config">--config &lt;config&gt;</a>
 </li>
-        <li><a href="cli.html#cmdoption-ramp-database-compute-contributivity-event">--event &lt;event&gt;</a>
+        <li><a href="cli.html#cmdoption-ramp-database-compute-contributivity-config-event">--config-event &lt;config_event&gt;</a>
 </li>
         <li><a href="cli.html#cmdoption-ramp-database-compute-contributivity-min-improvement">--min-improvement &lt;min_improvement&gt;</a>
-</li>
-        <li><a href="cli.html#cmdoption-ramp-database-compute-contributivity-ramp-data-dir">--ramp-data-dir &lt;ramp_data_dir&gt;</a>
-</li>
-        <li><a href="cli.html#cmdoption-ramp-database-compute-contributivity-ramp-kit-dir">--ramp-kit-dir &lt;ramp_kit_dir&gt;</a>
-</li>
-        <li><a href="cli.html#cmdoption-ramp-database-compute-contributivity-ramp-predictions-dir">--ramp-predictions-dir &lt;ramp_predictions_dir&gt;</a>
 </li>
       </ul></li>
       <li>
