Updating the docs in ramp-board/advanced/ for branch: advanced, commit 47a524457d829c3adf2faa840a4f5a81456a2c5f [skip ci]

--- a/ramp-board/advanced/genindex.html
+++ b/ramp-board/advanced/genindex.html
@@ -654,6 +654,8 @@
 </li>
         <li><a href="generated/ramp_engine.local.CondaEnvWorker.html#ramp_engine.local.CondaEnvWorker.__init__">(ramp_engine.local.CondaEnvWorker method)</a>
 </li>
+        <li><a href="generated/ramp_engine.remote.DaskWorker.html#ramp_engine.remote.DaskWorker.__init__">(ramp_engine.remote.DaskWorker method)</a>
+</li>
         <li><a href="generated/ramp_frontend.forms.AskForEventForm.html#ramp_frontend.forms.AskForEventForm.__init__">(ramp_frontend.forms.AskForEventForm method)</a>
 </li>
         <li><a href="generated/ramp_frontend.forms.CodeForm.html#ramp_frontend.forms.CodeForm.__init__">(ramp_frontend.forms.CodeForm method)</a>
@@ -785,16 +787,18 @@
 </li>
       <li><a href="generated/ramp_frontend.views.admin.dashboard_submissions.html#ramp_frontend.views.admin.dashboard_submissions">dashboard_submissions() (in module ramp_frontend.views.admin)</a>
 </li>
+      <li><a href="generated/ramp_engine.remote.DaskWorker.html#ramp_engine.remote.DaskWorker">DaskWorker (class in ramp_engine.remote)</a>
+</li>
       <li><a href="generated/ramp_frontend.views.general.data_science_themes.html#ramp_frontend.views.general.data_science_themes">data_science_themes() (in module ramp_frontend.views.general)</a>
 </li>
       <li><a href="generated/ramp_utils.testing.database_config_template.html#ramp_utils.testing.database_config_template">database_config_template() (in module ramp_utils.testing)</a>
 </li>
       <li><a href="generated/ramp_database.tools.event.delete_event.html#ramp_database.tools.event.delete_event">delete_event() (in module ramp_database.tools.event)</a>
 </li>
-      <li><a href="generated/ramp_database.tools.team.delete_event_team.html#ramp_database.tools.team.delete_event_team">delete_event_team() (in module ramp_database.tools.team)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="generated/ramp_database.tools.team.delete_event_team.html#ramp_database.tools.team.delete_event_team">delete_event_team() (in module ramp_database.tools.team)</a>
+</li>
       <li><a href="generated/ramp_database.tools.event.delete_problem.html#ramp_database.tools.event.delete_problem">delete_problem() (in module ramp_database.tools.event)</a>
 </li>
       <li><a href="generated/ramp_database.tools.event.delete_submission_similarity.html#ramp_database.tools.event.delete_submission_similarity">delete_submission_similarity() (in module ramp_database.tools.event)</a>
