Updating the docs in ramp-board/dev/ for branch: master, commit fa78523e6384835d5e8d98042d2f8b528ace7da0 [skip ci]

--- a/ramp-board/dev/genindex.html
+++ b/ramp-board/dev/genindex.html
@@ -228,6 +228,8 @@
 </li>
         <li><a href="cli.html#cmdoption-ramp-database-delete-user-config">ramp-database-delete-user command line option</a>
 </li>
+        <li><a href="cli.html#cmdoption-ramp-database-export-leaderboards-config">ramp-database-export-leaderboards command line option</a>
+</li>
         <li><a href="cli.html#cmdoption-ramp-database-get-submissions-by-state-config">ramp-database-get-submissions-by-state command line option</a>
 </li>
         <li><a href="cli.html#cmdoption-ramp-database-make-user-admin-config">ramp-database-make-user-admin command line option</a>
@@ -305,6 +307,8 @@
         <li><a href="cli.html#cmdoption-ramp-database-add-submission-event">ramp-database-add-submission command line option</a>
 </li>
         <li><a href="cli.html#cmdoption-ramp-database-delete-event-team-event">ramp-database-delete-event-team command line option</a>
+</li>
+        <li><a href="cli.html#cmdoption-ramp-database-export-leaderboards-event">ramp-database-export-leaderboards command line option</a>
 </li>
         <li><a href="cli.html#cmdoption-ramp-database-get-submissions-by-state-event">ramp-database-get-submissions-by-state command line option</a>
 </li>
@@ -455,6 +459,8 @@
 
       <ul>
         <li><a href="cli.html#cmdoption-ramp-database-add-submission-path">ramp-database-add-submission command line option</a>
+</li>
+        <li><a href="cli.html#cmdoption-ramp-database-export-leaderboards-path">ramp-database-export-leaderboards command line option</a>
 </li>
       </ul></li>
       <li>
@@ -1181,6 +1187,17 @@
 </li>
       </ul></li>
       <li>
+    ramp-database-export-leaderboards command line option
+
+      <ul>
+        <li><a href="cli.html#cmdoption-ramp-database-export-leaderboards-config">--config &lt;config&gt;</a>
+</li>
+        <li><a href="cli.html#cmdoption-ramp-database-export-leaderboards-event">--event &lt;event&gt;</a>
+</li>
+        <li><a href="cli.html#cmdoption-ramp-database-export-leaderboards-path">--path &lt;path&gt;</a>
+</li>
+      </ul></li>
+      <li>
     ramp-database-get-submissions-by-state command line option
 
       <ul>
@@ -1222,6 +1239,8 @@
         <li><a href="cli.html#cmdoption-ramp-database-set-user-access-level-login">--login &lt;login&gt;</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     ramp-database-sign-up-team command line option
 
@@ -1233,8 +1252,6 @@
         <li><a href="cli.html#cmdoption-ramp-database-sign-up-team-team">--team &lt;team&gt;</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     ramp-database-update-all-users-leaderboards command line option
 
