Updating the docs in ramp-workflow/dev/ for branch: master, commit 3c06ebfaaee89c6d95ec342a29ca671f2a8b0f97 [skip ci]

--- a/ramp-workflow/dev/genindex.html
+++ b/ramp-workflow/dev/genindex.html
@@ -194,6 +194,13 @@
 </li>
       </ul></li>
       <li>
+    --data-label &lt;data_label&gt;
+
+      <ul>
+        <li><a href="command_line.html#cmdoption-ramp-test-data-label">ramp-test command line option</a>
+</li>
+      </ul></li>
+      <li>
     --descending
 
       <ul>
@@ -338,12 +345,12 @@
         <li><a href="command_line.html#cmdoption-ramp-show-leaderboard-step">--step &lt;step&gt;</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     ramp-test command line option
 
       <ul>
+        <li><a href="command_line.html#cmdoption-ramp-test-data-label">--data-label &lt;data_label&gt;</a>
+</li>
         <li><a href="command_line.html#cmdoption-ramp-test-ignore-warning">--ignore-warning</a>
 </li>
         <li><a href="command_line.html#cmdoption-ramp-test-notebook">--notebook</a>
