Updating the docs in ramp-workflow/dev/ for branch: master, commit b379294da353ccc843186f9d4a2cb5f768e0949f [skip ci]

--- a/ramp-workflow/dev/problem.html
+++ b/ramp-workflow/dev/problem.html
@@ -257,7 +257,7 @@ is a class with a <code class="docutils literal notranslate"><span class="pre">t
 function, which defines the workflow to implement during training and
 testing time. An attribute called <code class="docutils literal notranslate"><span class="pre">workflow_element_names</span></code> is also
 required. This attribute is a list of the file names that
-<code class="docutils literal notranslate"><span class="pre">ramp_test_submission</span></code> expects for each submission. This class is
+<code class="docutils literal notranslate"><span class="pre">ramp-test</span></code> expects for each submission. This class is
 implemented by RAMP workflow internals to train and test each submission of a
 challenge.</p>
 <ul class="simple">
