Updating the docs in ramp-workflow/dev/ for branch: master, commit cbc3e831d6598d69810bd1bfe5866e6cbf670374 [skip ci]

--- a/ramp-workflow/dev/genindex.html
+++ b/ramp-workflow/dev/genindex.html
@@ -197,6 +197,8 @@
     --data-label &lt;data_label&gt;
 
       <ul>
+        <li><a href="command_line.html#cmdoption-ramp-show-leaderboard-data-label">ramp-show-leaderboard command line option</a>
+</li>
         <li><a href="command_line.html#cmdoption-ramp-test-data-label">ramp-test command line option</a>
 </li>
       </ul></li>
@@ -330,6 +332,8 @@
 </li>
         <li><a href="command_line.html#cmdoption-ramp-show-leaderboard-bagged">--bagged</a>
 </li>
+        <li><a href="command_line.html#cmdoption-ramp-show-leaderboard-data-label">--data-label &lt;data_label&gt;</a>
+</li>
         <li><a href="command_line.html#cmdoption-ramp-show-leaderboard-ascending">--descending</a>
 </li>
         <li><a href="command_line.html#cmdoption-ramp-show-leaderboard-bagged">--mean</a>
@@ -345,6 +349,8 @@
         <li><a href="command_line.html#cmdoption-ramp-show-leaderboard-step">--step &lt;step&gt;</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     ramp-test command line option
 
